--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,4 +6,4 @@ export interface Props {
 }
 const {height = 80, width = 60 } = Astro.props;
 ---
-<img height={height} width={width} src="/logo.svg" alt="Astro logo">
+<img height={height} width={width} src="logo.svg" alt="Astro logo">
