--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,11 +16,12 @@ let title = 'My Astro Site';
 ---
 <html lang="en">
 <head>
+	<base href="/astro-base-component-styles/">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>{title}</title>
 
-	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 	<style>
 		header {
